--- a/css/Home.css
+++ b/css/Home.css
@@ -1,12 +1,49 @@
 html {
+  width: 100%;
   height: 100%;
-  text-align: center;
 }
 body {
-  background: #E7E6E6;
+  width: 100%;
   height: 100%;
+  background: #E7E6E6;
+}
+header {
+  height: 200px;
+  background: green;
+}
+footer  {
+  width: 100%;
+  height: 120px;
+}
+footer .row {
+  height: 100%;
+  text-align:center;
+  display: flex;
+  align-items: center;
+}
+footer .col-4 i{display: block;}
+.DairyMission {
+  height: 350px;
+  background: #8aa5cb;
+}
+.DairyMission h1 {
+  text-align: center;
+  color: white;
+}
+.DairyMission > .Title {height: 50px;}
+.MissionList {height: 300px;}
+.MissionList  > .radio-inline{
+  height:  calc(100% / 3);
   margin: unset;
+  /* centerにする */
+  display: flex;
+  align-items: center;
 }
+.MissionList  > input {display: block;}
+
+
+
 canvas{
-  margin-top: 25%;
+
 }
+.characterTraining {background: #FFF2CC;}
