--- a/css/Home.css
+++ b/css/Home.css
@@ -9,18 +9,24 @@ body {
 }
 header {
   height: 200px;
-  background: green;
+  background: #E7E6E6;
+}
+header > h1 {
+  text-align: center;
+  line-height: 200px;
 }
 footer  {
   width: 100%;
   height: 120px;
+  background: #E7E6E6;
 }
 footer .row {
   height: 100%;
-  text-align:center;
   display: flex;
+  text-align:center;
   align-items: center;
 }
+footer .col-4 {padding: unset;}
 footer .col-4 i{display: block;}
 .DairyMission {
   height: 350px;
@@ -35,9 +41,14 @@ footer .col-4 i{display: block;}
 .MissionList  > .radio-inline{
   height:  calc(100% / 3);
   margin: unset;
-  /* centerにする */
   display: flex;
   align-items: center;
 }
-.MissionList  > input {display: block;}
+.MissionList   input {display: block;}
+.MissionList label {font-size: -webkit-xxx-large;}
 .characterTraining {background: #FFF2CC;}
+.characterTraining button {
+  width: 100px;
+  height: 80px;
+  margin-left : 80%;
+}
