--- a/css/Home.css
+++ b/css/Home.css
@@ -1,63 +1,67 @@
-.characterTraining {
-  width: 100%;
-  height: 750px;
-  background: #FFF2CC;
-}
+/* .characterTraining {
+width: 100%;
+height: 750px;
+background: #FFF2CC;
+} */
 
-/* 下は使わない */
+.characterTraining {width: 100%;}
+#rectangle {background: #FFF2CC;}
 
-html {
-  width: 100%;
-  height: 100%;
+/*----------------
+下は使わない
+----------------*/
+/* html {
+width: 100%;
+height: 100%;
 }
 body {
-  width: 100%;
-  margin: unset;
-  background: #E7E6E6;
+width: 100%;
+margin: unset;
+background: #E7E6E6;
 }
 header {
-  height: 200px;
-  background: #E7E6E6;
+height: 200px;
+background: #E7E6E6;
 }
 header > h1 {
-  text-align: center;
-  line-height: 200px;
-  margin: unset;
+text-align: center;
+line-height: 200px;
+margin: unset;
 }
 footer  {
-  width: 100%;
-  height: 120px;
-  background: #E7E6E6;
+width: 100%;
+height: 120px;
+background: #E7E6E6;
 }
 footer .row {
-  height: 100%;
-  display: flex;
-  text-align:center;
-  align-items: center;
+height: 100%;
+display: flex;
+text-align:center;
+align-items: center;
 }
 footer .col-4 {padding: unset;}
 footer .col-4 i{display: block;}
 .DairyMission {
-  height: 350px;
-  background: #8aa5cb;
+height: 350px;
+background: #8aa5cb;
 }
 .DairyMission h1 {
-  text-align: center;
-  color: white;
+text-align: center;
+color: white;
 }
 .DairyMission > .Title {height: 50px;}
 .MissionList {height: 300px;}
 .MissionList  > .radio-inline{
-  height:  calc(100% / 3);
-  margin: unset;
-  display: flex;
-  align-items: center;
+height:  calc(100% / 3);
+margin: unset;
+display: flex;
+align-items: center;
 }
 .MissionList   input {display: block;}
 .MissionList label {font-size: -webkit-xxx-large;}
 
 .characterTraining button {
-  width: 100px;
-  height: 80px;
-  margin-left : 80%;
-}
+width: 100px;
+height: 80px;
+margin-left : 80%;
+} */
